# local-rag-llamaindex

./: .env  .gitignore  Dockerfile.base  Modelfile  README.md  app.py  config.yml  docker-compose.yml  pyproject.toml  requirements.txt
api/: Dockerfile  main.py  rag.py
data/: Dockerfile  data.py
ollama/: Modelfile  run_ollama.sh
rag/: data.py  download_papers.py  rag.py
